tests/contract_testcases/substrate/calls/payable_functions.sol

        contract c {
            receive() public {

            }
        }
        
// ---- Expect: diagnostics ----
// error: 3:13-29: receive function must be declared external
